[package]
name = "kaarten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
simple_logger = "1.13.0"
tokio = "1.12.0"
aws_lambda_events = "0.5.0"
http = "0.2.5"
aws-sdk-dynamodb = "0.17.0"
aws-config = "0.47.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
simple-error = "0.2"
reqwest = { version = "0.11", features = ["json"] }